--- a/app/src/features/apiClient/screens/apiClient/components/views/components/Collection/components/CollectionRunnerView/collectionRunnerView.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/views/components/Collection/components/CollectionRunnerView/collectionRunnerView.scss
@@ -1,8 +1,7 @@
 .collection-runner-view {
   display: flex;
-  flex-wrap: nowrap;
-  width: 100%;
   height: 100%;
+  overflow: hidden;
 
   .bottomsheet-layout-container.horizontal-split .bottom-sheet-panel-container {
     background-color: transparent;
