--- a/app/src/features/apiClient/screens/apiClient/components/views/components/Collection/components/CollectionRunnerView/components/RunConfigView/runConfigView.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/views/components/Collection/components/CollectionRunnerView/components/RunConfigView/runConfigView.scss
@@ -1,5 +1,6 @@
 .run-config-view-container {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  overflow: hidden;
+  width: 100%;
 }
